trying something new

--- a/furuci/index.html
+++ b/furuci/index.html
@@ -9,7 +9,18 @@
    <body>
 <!-- Page Header  -->
       <header class="page-header">
+         <p style="background-image: url('flowersss.jpg');"></p>
          <h1>Portfolio</h1>
+         <nav id"main-nav" style="display: block;">
+         <ul>
+            <li><a href="#"><bold>Intro to Blog</bold></a></li>
+            <li><a href="#"><bold>Organized Manner</bold></a></li>
+            <li><a href="#"><bold>Feedback is Key</bold></a></li>
+            <li><a href="#"><bold> In Need of Visuals</bold></a></li>
+         </ul> 
+         </nav>
+
+
       </header>
 <!-- Main Content Area  -->
       <main>
@@ -371,14 +382,7 @@
 
          <header class="page-header">
             <background-image src="images/flowersss.jpg" alt="flowers"/>
-             <nav id="main-nav">
-            <a href="#">Module 1.1</a>
-            <a href="#">Module 1.2</a>
-            <a href="#">Module 2.1</a>
-            <a href="#">Module 2.2</a>
-            <a href="#">Module 3.1</a>
-            <a href="#">Module 3.2</a>
-         </nav>
+
          </header>
             <h3>Introduction</h3>
 
