Fixed my link to my blog as well as image pathing
Fixed my image pathing as well as link to my blog

--- a/sesserh/index.html
+++ b/sesserh/index.html
@@ -15,12 +15,11 @@
 
     <nav>
       <ul>
-        <li><a href="../sesserh/">Blog</a></li>
+        <li><a href="blog/index.html">Blog</a></li>
         <li><a href="https://www.figma.com/board/Hz1msTT1meKP4ls0zFuG7E/Design-Challenge?node-id=2-2&t=9M56830tzc3bxO7C-1" target="_blank">Design Challenge 1</a></li>
         <li><a href="https://www.figma.com/design/BKKFR6vzpRhka1S5XChEIo/Desing-Challenge-2-Food-Delivery-Service?node-id=0-1&t=enuiFPKxtS0HWlns-1" target="_blank">Design Challenge 2</a></li>
         <li><a href="https://www.figma.com/design/nprplu84KiGMeyheHQ5ZDd/Design-Challenge-3?node-id=0-1&t=KGVwsv6FrKVMoqeL-1" target="_blank">Design Challenge 3</a></li>
       </ul>
      </nav>
-    
   </body>
 </html>
