--- a/mcialwainc/index.html
+++ b/mcialwainc/index.html
@@ -8,7 +8,7 @@
 <body>
 I'm a golfer and lacrosse player who also has a passion for fashion. I love sports and my Seattle teams, as well as shoes and clothes. 
 </body>
-<head>Check out the Portfolio</head>
+<head>Check out the work</head>
 <body>The items I have included are projects I worked on for class</body>
 <link href="https://github.com/cwu-itm/cwu-itm.github.io/pull/145#issue-3135393739">
 <link hreflang="https://github.com/cwu-itm/cwu-itm.github.io/pull/141#issue-3118547568">
