--- a/furuci/index.html
+++ b/furuci/index.html
@@ -3,15 +3,13 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link href="css/styles.css" rel="css">
+      <link href="css/styles.css" rel="stylesheet">
       <title>Isabella Furuc | Portfolio</title>
    </head>
    <body>
 <!-- Page Header  -->
       <header class="page-header">
-       <body style="background-image: url('flowersss.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;"
-
-       ></body> 
+       <body style="background-image: url('flowersss.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;"></body> 
 
          
          <h1>Portfolio</h1>
