--- a/obrienc/index.html
+++ b/obrienc/index.html
@@ -10,8 +10,8 @@
   <main>
     <h1>Hi, I'm Caitlin</h1>
 
-    <p class="blurb-text">
-      Student of IT, aspiring manager, Mom of 2, happy human. I care about the details and how things make people feel. Passionate about health and wellness, sustainability and creativity. Art in all forms.
+    <p class="blurb-text">.
+      Student of IT and Administrative Management, Innovation through IT and Sustainability. Passionate about health and wellness and helping people solve complex problems. Art in all forms.
     </p>
 
     <h2>Here is my portfolio.</h2>
