--- a/portfolios/index.html
+++ b/portfolios/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>IT 312 | Designing Digital Environments</title>
-        <link href="../styles.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
 <!-- Site Header -->           
