--- a/portfolios/index.html
+++ b/portfolios/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>IT 312 | Designing Digital Environments</title>
+        <title>IT 312 | Designing the Digital Environment</title>
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
@@ -28,7 +28,7 @@
 <!-- Main Content Area -->
         <main>
             <header>
-                <h2>Designing Digital Environments - Spring 2025</h2>
+                <h2>Designing the Digital Environment - Winter 2026</h2>
             </header>
             <section class="portfolio">
                 <ul>
