Module 1.1 Blog Post
Added systems thinking and MBSE blog content with APA sources

--- a/fayyaza/index.html
+++ b/fayyaza/index.html
@@ -18,25 +18,40 @@
             <header class="article-header">
                <h2>Module 1.1 Blog Post</h2>
             </header>
-            <h3>Health Cronut la Croix</h3>
-            <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice. Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out.</p>
-            <h3>Offal Tofu Cred Green Juice</h3>
-            <p>Microdosing portland banh mi bitters, pitchfork ethical selvage plaid keytar jianbing kickstarter cronut. Truffaut schlitz ennui, migas aesthetic letterpress la croix. Health goth 8-bit microdosing, cronut offal gluten-free tbh cornhole swag YOLO vape man bun godard. Pitchfork semiotics hella salvia kickstarter jean shorts. Air plant thundercats kombucha gentrify portland.</p>
-            <h3>Blue Roof Pour-Over Man Bun</h3>
-            <p>Yuccie mukbang pickled activated charcoal. PBR&B selfies DSA mustache authentic. Gochujang kombucha big mood retro, you probably haven't heard of them +1 lomo. Tbh pour-over yr viral gorpcore poutine four dollar toast. Bicycle rights man bun try-hard, mlkshk roof party occupy succulents taxidermy kogi enamel pin brunch paleo poutine yr. Blue bottle street art waistcoat typewriter yr hot chicken polaroid helvetica pitchfork.</p>
-            <ul>
-               <li>Neutra umami slow-carb vegan dreamcatcher.</li>
-               <li>Tacos cornhole humblebrag ethical.</li>
-               <li>DSA santo big mood organic charcoal bitters.</li>
-               <li>Hot chicken pitchfork poutine.</li>
-            </ul>
-            <h3>Mlkshk Stumptown Hot Chicken</h3>
-            <p>Next level gluten-free whatever, tacos activated charcoal bitters woke. Mlkshk photo booth bicycle rights paleo, butcher DIY ugh mukbang bespoke occupy affogato jawn adaptogen artisan tofu. Tbh gentrify you probably haven't heard of them neutra umami slow-carb vegan dreamcatcher waistcoat. Tacos cornhole humblebrag ethical austin neutra plaid. Sustainable gatekeep ugh locavore deep v, palo santo stumptown skateboard big mood organic lumbersexual mustache cornhole hot chicken. Gluten-free artisan cliche mumblecore af, edison bulb meditation messenger bag.</p>
+            <h3>Systems Thinking: Understanding Complexity in Digital Environments</h3>
+            <p>In our increasingly interconnected world, the challenges we face rarely exist in isolation. Whether designing a software application, managing a network infrastructure, or developing a complex digital system, the traditional approach of breaking problems into isolated pieces often falls short. This is where systems thinking becomes essential. Systems thinking represents a fundamental shift in how we perceive, analyze, and solve problems—particularly in the realm of digital systems where complexity, interdependencies, and emergent behaviors are the norm rather than the exception.</p>
+
+            <p>Systems thinking is a comprehensive approach to understanding how different components within a system interact and influence each other to create behaviors and outcomes that cannot be understood by examining individual parts alone. Rather than viewing elements in isolation, systems thinking recognizes that the relationships between components are just as important—if not more so—than the components themselves. In my own words, systems thinking is the practice of stepping back to see the forest instead of just the trees, understanding that the forest has properties and behaviors that individual trees do not possess.</p>
+
+            <p>Holt (2023) articulates this principle clearly in <em>Systems Engineering Demystified</em> when describing systems theory: “The main tenet of systems theory is that it is a conceptual framework based on the principle that the component parts of a system can best be understood in the context of the relationships with each other and with other systems, rather than in isolation” (p. 2). This foundational principle emphasizes that systems thinking is not merely about cataloging parts but about comprehending the dynamic interactions that create system-level behaviors.</p>
+
+            <p>Arnold and Wade (2015) expand on this definition by identifying systems thinking as “a set of synergistic analytic skills used to improve the capability of identifying and understanding systems, predicting their behaviors, and devising modifications to them in order to produce desired effects” (p. 675). This definition highlights that systems thinking is both analytical and practical—it provides tools for understanding current system states while enabling us to envision and implement meaningful changes.</p>
+
+            <p>What distinguishes systems thinking from other analytical approaches is its emphasis on feedback loops, emergent properties, and boundaries. Feedback loops represent how outputs of a system can circle back to influence inputs, creating either reinforcing or balancing cycles. Emergent properties are characteristics that arise from the interaction of system components but are not present in any individual component. Boundaries define what is included within the system and what exists in the external environment, though systems thinkers recognize these boundaries are often conceptual rather than physical.</p>
+
+            <p>To deeply appreciate systems thinking, we must contrast it with the more traditional linear thinking that has dominated Western problem-solving approaches for centuries. Linear thinking, rooted in reductionist philosophy, assumes that complex problems can be solved by breaking them down into smaller, manageable pieces, solving each piece independently, and then reassembling the solutions. This approach follows a straight line from cause to effect.</p>
+
+            <p>Linear thinking has served us well in many domains, particularly in mechanical systems and straightforward cause-and-effect relationships. However, it fundamentally fails when applied to complex systems where multiple variables interact simultaneously and outcomes depend on context and timing. Meadows (2008) notes that “we can’t impose our will on a system. We can listen to what the system tells us and discover how its properties and our values can work together to bring forth something much better than could ever be produced by our will alone” (p. 170).</p>
+
+            <p>The differences between these two approaches manifest in several key ways. Linear thinking focuses on individual components, while systems thinking examines relationships and interactions. Linear thinking assumes stability and predictability, whereas systems thinking acknowledges dynamic behavior and emergence. Linear thinking seeks single causes and solutions, while systems thinking recognizes multiple causation and leverage points.</p>
+
+            <p>Model-Based Systems Engineering (MBSE) provides a structured way to apply systems thinking to complex digital systems. Holt (2023) describes MBSE as “a multidisciplinary, common-sense approach that enables the realization of successful systems” (p. 14). Models simplify reality by capturing essential system properties while managing complexity through abstraction.</p>
+
+            <p>As Holt (2023) explains, “the Model must be a simplification of the System and, therefore, there will be information associated with the System that is not contained in the Model” (p. 56). This selective abstraction allows stakeholders to understand system behavior without becoming overwhelmed by unnecessary detail.</p>
+
+            <p>Models support visualization, stakeholder communication, consistency checking, impact analysis, and early issue detection. They provide a shared language across disciplines and allow engineers to simulate system behavior before implementation, reducing risk and cost.</p>
+
+            <p>The shift from linear thinking to systems thinking, supported by model-based approaches, represents more than a technical methodology—it reflects a fundamental change in how we understand and interact with complexity. In digital environments where systems are interconnected and evolving, this shift is essential.</p>
+
+            <p>Systems thinking recognizes that system behaviors emerge from interactions rather than isolated components. In complex digital systems, MBSE operationalizes this perspective by creating manageable abstractions that support communication, analysis, and implementation. As digital systems continue to grow in complexity and importance, systems thinking and model-based engineering become not just beneficial, but essential.</p>
+            
             <footer class="article-footer">
                 <h3>Sources:</h3>
                 <ol>
-                    <li>Sherugar, S., & Budiu, R. (2016, August 21). <em>Direct manipulation: Definition</em>. Nielsen Norman Group. Retrieved March 19, 2025 from <a href="https://www.nngroup.com/articles/direct-manipulation/">https://www.nngroup.com/articles/direct-manipulation/</a></li>
-                    </ol>
+                  <li>Arnold, R. D., &amp; Wade, J. P. (2015). A definition of systems thinking: A systems approach. <em>Procedia Computer Science, 44</em>, 669–678. https://doi.org/10.1016/j.procs.2015.03.050</li>
+                  <li>Holt, J. (2023). <em>Systems engineering demystified</em> (2nd ed.). Packt Publishing.</li>
+                  <li>Meadows, D. H. (2008). <em>Thinking in systems: A primer</em>. Chelsea Green Publishing.</li>
+                </ol>
             </footer>
          </article>
 
