Fixed typo in Module 1.1 Blog Post

--- a/brodaj/index.html
+++ b/brodaj/index.html
@@ -123,7 +123,7 @@
             for years by prioritizing the very stakeholder communication GM had previously lacked. The Fiero eventually
             gave GM the technical confidence to build world-class mid-engine cars, a journey that ironically culminated
             in the 2020 Corvette C8.</p>
-         <p>However, the General Motors as a whole also serves as a warning that tools like MBSE are only as effective
+         <p>However, General Motors as a whole also serves as a warning that tools like MBSE are only as effective
             as the culture using them. Even with the advent of modern digital modeling, GM later suffered from the
             Cobalt
             ignition switch scandal, where GM management willingly ignored critical flaws in the Chevrolet Cobalt and
