Fixed typo in Module 1.1 blog post and improved readability

--- a/brodaj/index.html
+++ b/brodaj/index.html
@@ -75,21 +75,21 @@
          <h4>A Marketing Nightmare </h4>
          <p>This stakeholder misalignment led to one of the greatest marketing blunders in automotive history. Marketing
             ran with its baby Ferrari look, but the constraints forced by the commuter car label meant the car was
-            chronically slow. They famously touted a “50 MPG” rating to staidly the fuel-efficiency requirements, yet
+            chronically slow. They famously touted a “50 MPG” rating to satisfy the fuel-efficiency requirements, yet
             this figure was only achievable on the absolute slowest, most stripped-down version of the car that no one
             actually bought. </p>
          <p>This is a classic example of essential vs. accidental complexity. The essential complexity of a mid-engine
-            car is that it is hard to cool, and also looked really cool to buyers who then demanded performance to back
-            up the looks. The accidental complexity was introduced by the inefficiencies in people, process, and tooling
+            car is that it is hard to cool and also looked really cool to buyers who then demanded performance to back
+            up the looks. Accidental complexity was introduced by the inefficiencies in people, process, and tooling
             (Holt, 2023, p. 15). By using a mail-truck engine and inadequate suspension and brakes from existing
             platforms to save money, GM created a system where the parts were fundamentally at war with the package.</p>
          <h4>Complexity and Firey Consequences</h4>
-         <p>This leads to the final evil: Complexity. To reach those high MPG goals, stay under budget, and fit within
+         <p>This leads to the final evil: complexity. To reach those high MPG goals, stay under budget, and fit within
             the constraint of a cramped engine bay, the team used a smaller than ideal oil pan. This linear decision to
             save space, weight, and cost ignored the natural system of thermal dynamics. Because the car was
-            mid-engined, airflow was restricted.</p>
+            mid-engined, airflow in the engine bay was restricted.</p>
          <p>The systematic consequence was catastrophic. If an owner of a sporty car wanted to do sporty driving, they
-            risked oil starvation. And because the pan was so small, this was not a hard flaw to reach. Oil would run
+            risked oil starvation. And because the pan was so small, this was not hard to achieve. Oil would run
             low, the engine would overheat in its cramped, unventilated box, and eventually the overstressed engine
             block would crack. This allowed oil to leak onto hot exhaust components, leading to fires. The Fiero became
             a systems nightmare because the stakeholders failed to agree on what the car was as a whole. You cannot
