--- a/gavrilisn/index.html
+++ b/gavrilisn/index.html
@@ -62,7 +62,7 @@
         <h3>Sources:</h3>
         <ol>
             <li>JWU. (2025, July 22). <em>What Is Systems Thinking?</em> JWU Online. https://online.jwu.edu/blog/what-is-systems-thinking/</li>
-            <li>IBM. (2023, December 2). <em>Model Based Systems Engineering.</em> IBM. https://www.ibm.com/think/topics/model-based-systems-engineering</li>
+            <li>IBM.. (2023, December 2). <em>Model Based Systems Engineering.</em> IBM. https://www.ibm.com/think/topics/model-based-systems-engineering</li>
         </ol>
     </footer>
 </article>
