--- a/gavrilisn/index.html
+++ b/gavrilisn/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="css/styles.css" rel="stylesheet">
-      <title>Student Name | Portfolio</title>
+      <title>Nick Gavrilis | Portfolio</title>
    </head>
    <body>
 <!-- Page Header  -->
@@ -18,27 +18,54 @@
             <header class="article-header">
                <h2>Module 1.1 Blog Post</h2>
             </header>
-            <h3>Health Cronut la Croix</h3>
-            <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice. Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out.</p>
-            <h3>Offal Tofu Cred Green Juice</h3>
-            <p>Microdosing portland banh mi bitters, pitchfork ethical selvage plaid keytar jianbing kickstarter cronut. Truffaut schlitz ennui, migas aesthetic letterpress la croix. Health goth 8-bit microdosing, cronut offal gluten-free tbh cornhole swag YOLO vape man bun godard. Pitchfork semiotics hella salvia kickstarter jean shorts. Air plant thundercats kombucha gentrify portland.</p>
-            <h3>Blue Roof Pour-Over Man Bun</h3>
-            <p>Yuccie mukbang pickled activated charcoal. PBR&B selfies DSA mustache authentic. Gochujang kombucha big mood retro, you probably haven't heard of them +1 lomo. Tbh pour-over yr viral gorpcore poutine four dollar toast. Bicycle rights man bun try-hard, mlkshk roof party occupy succulents taxidermy kogi enamel pin brunch paleo poutine yr. Blue bottle street art waistcoat typewriter yr hot chicken polaroid helvetica pitchfork.</p>
-            <ul>
-               <li>Neutra umami slow-carb vegan dreamcatcher.</li>
-               <li>Tacos cornhole humblebrag ethical.</li>
-               <li>DSA santo big mood organic charcoal bitters.</li>
-               <li>Hot chicken pitchfork poutine.</li>
-            </ul>
-            <h3>Mlkshk Stumptown Hot Chicken</h3>
-            <p>Next level gluten-free whatever, tacos activated charcoal bitters woke. Mlkshk photo booth bicycle rights paleo, butcher DIY ugh mukbang bespoke occupy affogato jawn adaptogen artisan tofu. Tbh gentrify you probably haven't heard of them neutra umami slow-carb vegan dreamcatcher waistcoat. Tacos cornhole humblebrag ethical austin neutra plaid. Sustainable gatekeep ugh locavore deep v, palo santo stumptown skateboard big mood organic lumbersexual mustache cornhole hot chicken. Gluten-free artisan cliche mumblecore af, edison bulb meditation messenger bag.</p>
-            <footer class="article-footer">
-                <h3>Sources:</h3>
-                <ol>
-                    <li>Sherugar, S., & Budiu, R. (2016, August 21). <em>Direct manipulation: Definition</em>. Nielsen Norman Group. Retrieved March 19, 2025 from <a href="https://www.nngroup.com/articles/direct-manipulation/">https://www.nngroup.com/articles/direct-manipulation/</a></li>
-                    </ol>
-            </footer>
-         </article>
+            <h3>introduction</h3>
+            <p>The type of digital systems used today are more complex and interconnected than ever, which can also make them unpredictable. These types of systems include cloud platforms, websites, and other applications. These types of systems have many moving parts, which is where most problems come from. Due to a digital system having many different moving parts, it can be difficult to find where a potential problem is coming from. That is where system thinking becomes a useful skill. Rather than just looking at singular events, it encourages us to think about how each component of a particular system affects the other parts.</p>
+            <p>
+        This blog post will explain what system thinking is, how it differs from other approaches such as traditional linear thinking, and the benefits of doing so. By better understanding these concepts, we are more equipped to handle complex systems and use the best approach when dealing with specific digital systems.
+    </p>
+ <h3>System Thinking</h3>
+    <p>
+        As previously stated, system thinking is a holistic approach to understanding how a system functions (JWU, 2025). Although systems can be anything—including natural systems—in this case they are mostly digital systems. But system thinking does not only help people understand digital systems; doctors can view the human body as a system, construction workers can view a house as a system, and a father can view their family as a system. It applies to many different concepts.
+    </p>
+    <p>
+        You cannot talk about system thinking without first acknowledging system engineering. In today’s digital landscape, new systems are being engineered constantly. This is the act of creating a new system. Another aspect of systems is that they often have stakeholders—individuals who rely on the system to be successful or have an interest in it. Another attribute of a system is that they can often be complicated; some aspects of the human body remain a complete mystery even in today’s age. This means that small changes in the system can have effects that lead to big outcomes. If we examine those small changes beforehand using system thinking, we can be more prepared to anticipate and understand the outcome. This can be a lot more useful than linear thinking, which just treats the problems as they arise. In today’s digital landscape, it is especially important for IT professionals to approach these platforms with system thinking.
+    </p>
+
+    <h3>Linear Thinking</h3>
+    <p>
+        To show why system thinking is a better approach, we will compare it to its counterpart: linear thinking. This is the traditional approach when it comes to solving problems in a system. This process typically involves finding a problem and then addressing the problem but not the root of it. For example, let’s say my computer keeps crashing every time I try and play a video game. A linear approach would be a more obvious, surface-level solution. Maybe I assume the game is too demanding, so I lower the graphic settings. Now say it still is not working—I could assume that my computer just isn’t powerful enough and I need to upgrade it.
+    </p>
+    <p>
+        The issue with approaching the problem like this is that I am only reacting to the crash without understanding why it could occur. Instead of looking at the system as containing individual parts, I should view my computer as a system with multiple parts, with each part affecting the other. A system thinking approach would be more useful, such as asking: Is the GPU overheating because the fans are clogged? Is the power supply not enough? Is the game interacting poorly with a certain application that is open? Although it can be a bit overwhelming, by looking at the computer as a system, I am more likely to find the cause of the problem. In IT careers, it is essential to not only fix problems as they occur but understand and then fix the underlying issues.
+    </p>
+
+    <h3>MDSE</h3>
+    <p>
+        In more complex digital systems, it can be harder to understand them. That is where Model-Based Systems Engineering (MBSE) comes in handy. MBSE uses diagrams, models, and structures to show how a system works (IBM, 2023). Think of it like blueprints for a house or schematics for a highway. This can help you mentally track how all the parts connect when it is all laid out. This helps everyone involved with the system avoid confusion. It can also help avoid problems early by noticing them before the system is implemented. Let’s say we are designing a laptop and are deciding what needs to go where. After it is completed, you notice that the location you planned to put the GPU in will overheat more easily than another area. This allows you to address the root cause of something before it becomes a problem.
+    </p>
+    <p>
+        A great aspect of MBSE is that it directly aligns with system thinking. It encourages people to look at relationships and interactions between different parts of a system. When you can see how a system is meant to operate, you can anticipate potential issues that could arise. The best-made systems are ones that are made in this way, so most problems can be ironed out before they are implemented or released. This is a huge problem in the video game industry. Far too often, games are released and then plagued by performance issues and bugs. I believe that if some studios were to implement MBSE and systems thinking when designing their game, they would be higher quality and less likely to contain glitches or bugs.
+    </p>
+    <p>
+        For cloud environments, diagrams can be helpful to show how the data is retrieved and stored, and how it can be scaled. These models make it easier to troubleshoot issues, plan for growth, and make sure systems behave as they are intended to. Model-based approaches use system thinking to create something tangible that helps us understand and design systems that function as they should.
+    </p>
+
+    <h3>Conclusion</h3>
+    <p>
+        As previously stated, the word “system” covers many things: a pond, a web application, a human body, or countless others. When dealing with a system, it is important to approach it using a holistic system thinking approach. Modern systems are full of moving parts and interactions that are not always obvious to the eye. It is important to step back and understand how everything connects to solve problems, not just the symptoms. That is what system thinking can do, while singular thinking cannot. System thinking gives us a way to understand technology better but can apply to any system.
+    </p>
+    <p>
+        Model-based approaches continue this mindset by giving us tools to visualize and map out complex systems, like blueprints for a house. Whether it maps out the flow of data or how certain aspects are dependent on each other, these models help us make better decisions and understand the systems better. If we see changing one aspect of a system affecting another, we know what to anticipate. As digital environments continue to grow and become more complex, using model-based and system thinking becomes essential to maintaining these systems. Ultimately, MBSE uses system thinking and creates something practical and usable. Considering every aspect of a system can be overwhelming, so using these frameworks can help people better manage systems.
+    </p>
+
+    <footer class="article-footer">
+        <h3>Sources:</h3>
+        <ol>
+            <li>JWU. (2025, July 22). <em>What Is Systems Thinking?</em> JWU Online. https://online.jwu.edu/blog/what-is-systems-thinking/</li>
+            <li>IBM.. (2023, December 2). <em>Model Based Systems Engineering.</em> IBM. https://www.ibm.com/think/topics/model-based-systems-engineering</li>
+        </ol>
+    </footer>
+</article>
 
          <!-- Module 1.2 Blog Post Starts here -->
 
