--- a/casasr/index.html
+++ b/casasr/index.html
@@ -18,26 +18,60 @@
             <header class="article-header">
                <h2>Module 1.1 Blog Post</h2>
             </header>
-            <h3>Health Cronut la Croix</h3>
-            <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice. Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out.</p>
-            <h3>Offal Tofu Cred Green Juice</h3>
-            <p>Microdosing portland banh mi bitters, pitchfork ethical selvage plaid keytar jianbing kickstarter cronut. Truffaut schlitz ennui, migas aesthetic letterpress la croix. Health goth 8-bit microdosing, cronut offal gluten-free tbh cornhole swag YOLO vape man bun godard. Pitchfork semiotics hella salvia kickstarter jean shorts. Air plant thundercats kombucha gentrify portland.</p>
-            <h3>Blue Roof Pour-Over Man Bun</h3>
-            <p>Yuccie mukbang pickled activated charcoal. PBR&B selfies DSA mustache authentic. Gochujang kombucha big mood retro, you probably haven't heard of them +1 lomo. Tbh pour-over yr viral gorpcore poutine four dollar toast. Bicycle rights man bun try-hard, mlkshk roof party occupy succulents taxidermy kogi enamel pin brunch paleo poutine yr. Blue bottle street art waistcoat typewriter yr hot chicken polaroid helvetica pitchfork.</p>
-            <ul>
-               <li>Neutra umami slow-carb vegan dreamcatcher.</li>
-               <li>Tacos cornhole humblebrag ethical.</li>
-               <li>DSA santo big mood organic charcoal bitters.</li>
-               <li>Hot chicken pitchfork poutine.</li>
-            </ul>
-            <h3>Mlkshk Stumptown Hot Chicken</h3>
-            <p>Next level gluten-free whatever, tacos activated charcoal bitters woke. Mlkshk photo booth bicycle rights paleo, butcher DIY ugh mukbang bespoke occupy affogato jawn adaptogen artisan tofu. Tbh gentrify you probably haven't heard of them neutra umami slow-carb vegan dreamcatcher waistcoat. Tacos cornhole humblebrag ethical austin neutra plaid. Sustainable gatekeep ugh locavore deep v, palo santo stumptown skateboard big mood organic lumbersexual mustache cornhole hot chicken. Gluten-free artisan cliche mumblecore af, edison bulb meditation messenger bag.</p>
-            <footer class="article-footer">
-                <h3>Sources:</h3>
-                <ol>
-                    <li>Sherugar, S., & Budiu, R. (2016, August 21). <em>Direct manipulation: Definition</em>. Nielsen Norman Group. Retrieved March 19, 2025 from <a href="https://www.nngroup.com/articles/direct-manipulation/">https://www.nngroup.com/articles/direct-manipulation/</a></li>
-                    </ol>
-            </footer>
+            <h3>Systems Thinking, Linear Thinking, and Why Models Matter in Complex Systems</h3>
+
+<p>
+When people talk about systems thinking, it often gets framed as something abstract or overly theoretical, but in practice it is much more concrete than that. Systems thinking, in my own words, is the ability to see the entire lifecycle of something from start to finish and understand how every decision, detail, and interaction contributes to the final outcome. It is cradle-to-grave thinking. That means not just focusing on what a system does, but how it is built, who it is built for, how people will actually use it, and how today’s choices create consequences later that circle back in ways that are easy to miss if you are only focused on the task in front of you.
+</p>
+
+<p>
+At its core, systems thinking is about refusing to oversimplify. It is paying attention to the small details that usually get brushed off as someone else’s problem. Those details include timelines, resources, communication, human behavior, constraints, and even the language used to explain how something works. A systems thinker understands that systems do not exist in isolation. They interact with people, environments, and other systems, and those interactions matter just as much as the technical components themselves. As Holt explains, system behavior emerges from interactions rather than individual parts acting alone (Holt, 2019).
+</p>
+
+<p>
+This approach differs significantly from more traditional, linear ways of thinking. Linear thinking assumes that problems can be broken down into separate pieces, solved one at a time, and then reassembled into a working whole. Cause and effect are treated as direct and predictable. If something goes wrong, the instinct is to identify a single point of failure and fix it. While this approach can work for simple problems, it becomes unreliable as systems grow more complex.
+</p>
+
+<p>
+The issue with linear thinking is not that it is completely wrong, but that it is incomplete. It encourages short-term fixes and local optimization without fully considering downstream effects. In real-world projects, especially in construction and digital systems, this leads to repeated delays, rework, and unexpected failures. Decisions made early without full context often return later as larger problems. Linear thinking treats these outcomes as isolated incidents instead of recognizing them as predictable consequences of earlier choices.
+</p>
+
+<p>
+Systems thinking challenges this mindset by focusing on feedback loops and long-term behavior. Instead of asking what broke, it asks why the system was structured in a way that allowed the failure to happen. It recognizes that actions do not move forward in a straight line. They loop back. Human behavior plays a critical role in this process. People misunderstand instructions, adapt to poor designs, work around constraints, and respond to incentives in ways that plans rarely account for. Ignoring these realities is one of the most common reasons systems fail repeatedly.
+</p>
+
+<p>
+This distinction becomes especially important when designing complex digital systems. Digital systems are dynamic. They evolve over time, scale under changing conditions, and interact continuously with users and other systems. Attempting to design these systems using purely linear reasoning leads to fragile solutions that break as soon as assumptions no longer hold. Von Bertalanffy’s general systems theory emphasizes that complex systems cannot be understood solely by analyzing their components in isolation, because relationships fundamentally shape system behavior (von Bertalanffy, 1968).
+</p>
+
+<p>
+A model-based approach aligns naturally with systems thinking because it forces designers to engage with those relationships early and explicitly. Model-Based Systems Engineering replaces disconnected documentation with shared models that represent system structure and behavior. These models make assumptions visible and highlight dependencies, constraints, and interfaces that might otherwise be overlooked. Holt notes that models allow teams to reason about complexity before it becomes unmanageable rather than reacting after failures occur (Holt, 2019).
+</p>
+
+<p>
+In the context of complex digital systems, this matters because intuition alone is not sufficient. There are too many interactions happening at once, and many effects are delayed or indirect. Models allow designers to test scenarios, evaluate trade-offs, and understand how changes ripple through the system without risking the live environment. They also improve communication by providing a shared reference point, reducing ambiguity and guesswork across teams.
+</p>
+
+<p>
+Organizations such as the International Council on Systems Engineering emphasize that model-based approaches are essential as systems become increasingly interconnected and adaptive. Models act as a single source of truth that evolves alongside the system, making it easier to manage change and reduce unintended consequences over time (INCOSE, 2022).
+</p>
+
+<p>
+Ultimately, systems thinking is about responsibility. It requires doing the work early, thinking through consequences, and acknowledging that shortcuts taken in one area often surface later as larger problems elsewhere. Linear thinking may appear efficient in the moment, but systems thinking is what allows complex digital systems to function reliably in the real world. A model-based approach gives this way of thinking structure, making complexity manageable rather than overwhelming.
+</p>
+
+<footer class="article-footer">
+<p>
+Holt, J. (2019). <em>Systems engineering demystified</em> (2nd ed.). Packt Publishing.
+</p>
+<p>
+von Bertalanffy, L. (1968). <em>General system theory: Foundations, development, applications</em>. George Braziller.
+</p>
+<p>
+International Council on Systems Engineering. (2022). <em>INCOSE vision 2035</em>. https://www.incose.org
+</p>
+</footer>
+
          </article>
 
          <!-- Module 1.2 Blog Post Starts here -->
